# asus-router

./: .env.example  Cargo.toml  Dockerfile  README.md  install.sh
.github/workflows/: asus-router.yml
src/: main.rs
src/cmd/: app.rs  apply_iptable_rules_command.rs  discover_youtube_subnets_command.rs  mod.rs
src/resolver/: dns_address_resolver.rs  google_subnets_resolver.rs  mod.rs
