[package]
name = "asus-router"
version = "1.0.0"
edition = "2021"
rust-version = "1.85.0"
publish = false

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ipnet = "2.11.0"
log = "0.4.27"
clap = { version = "4.5.35", features = ["derive"] }
trippy = { version = "0.12.2", default-features = false, features = ["core", "dns"] }
anyhow = "1.0.97"
env_logger = "0.11.8"
ip-in-subnet = "0.1.4"
